--- a/web/src/app/components/user-signin/user-signin.component.html
+++ b/web/src/app/components/user-signin/user-signin.component.html
@@ -4,15 +4,15 @@
     <form [formGroup]="signinForm" *ngIf="signinForm" (ngSubmit)="signinUser()">
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="text"  
-                class="form-control" formControlName="email"   id="email" 
+            <input type="text"
+                class="form-control" formControlName="email"   id="email"
                  name="email" (ngModel)="currentUser.email"
             />
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" 
-                class="form-control" formControlName="password" id="password" 
+            <input type="password"
+                class="form-control" formControlName="password" id="password"
                 name="password"  (ngModel)="currentUser.password"
             />
         </div>
@@ -28,12 +28,12 @@
         </div>
     </form>
 
-   
-   
+
+
 
 </div>
 
 <div *ngIf="currentUser">
     <br />
-    <p>Cannot access this Tutorial...</p>
+    <p>Login to Access...</p>
 </div>
